data/derived/comb/progs/unify/prog2493.ml.out
Characters 71-96:
  | l -> (listReverse (List.tl l))::(List.hd l);;
         ^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
